// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JapiTableHead renders a table row for each data entry 1`] = `
<tbody>
  <tr>
    <td>
      1
    </td>
    <td />
  </tr>
  <tr>
    <td>
      2
    </td>
    <td />
  </tr>
</tbody>
`;

exports[`JapiTableHead renders appropriate cell values 1`] = `
<tbody>
  <tr>
    <td>
      101
    </td>
    <td>
      Title 1
    </td>
  </tr>
  <tr>
    <td>
      102
    </td>
    <td>
      Title 2
    </td>
  </tr>
</tbody>
`;
